<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




        <PreferenceCategory
            android:title="Basic Settings"

            >


            <CheckBoxPreference
                android:key="Notifications"
                android:title="Enable message notifications"
                android:summary="Enable/Disable notifications for the assistant"
                android:defaultValue="true"/>


            <EditTextPreference
                android:key="nickname"
                android:title="@string/nickname_pref"
                android:summary="@string/nickname_pref_summary"
                android:defaultValue="LoggedInUsername"

                />

            <ListPreference
                android:key="assistant_speed"
                android:title="Assistant Talking Rate"
                android:entries="@array/pref_assistantspeed_entries"
                android:entryValues="@array/pref_assistantspeed_values"
                android:defaultValue="Normal"
                android:summary="Change the speech rate of the assistant"
                android:dialogTitle="Change the speech rate of the assistant"
                />


        </PreferenceCategory>

    <PreferenceCategory
        android:title="Widget Settings"

        >
    <ListPreference
                android:key="pref_sync_connection_type"
                android:title="@string/pref_minimizedWidget"
                android:entries="@array/pref_minimizedWidget_entries"
                android:entryValues="@array/pref_minimizedWidget_values"
                android:defaultValue="@string/pref_minimizedWidget_default_value"
                android:summary="Change what information shows up in minimized widget"
                android:dialogTitle="@string/pref_minimizedWidget_dialog_title"
                />
    </PreferenceCategory>










</PreferenceScreen>